# uniswap-multicall-rs

./: Cargo.toml
src/: lib.rs  univ2.rs  univ3.rs
