[package]
name = "simple-amm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.13", features = ["ws"] }
dotenv = "*"
frankenstein = "0.30"
anyhow = "1.0"
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
sled = "0.34.7"

regex = "1.10.3"
amms = "0.6.1"
